--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale= 1.0">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre|Oswald|Ovo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Jockey+One|Ramabhadra|Rammetto+One|Ruda|Sigmar+One" rel="stylesheet">
 
 
  
@@ -33,7 +34,7 @@
  .logoc{float:left;}
  #social{position:absolute;top:60px; right:50px; height:0px; height:00px;}
  .banner{height:438px;position:relative;width:100%;}
-  h1{position:absolute;top:-300px;left:356px; opacity:; color:#ffffff ;font-family:'Suez One', serif; font-size:40px;}
+  h1{position:absolute;top:-300px;left:360px; opacity:; color:#ffffff ;font-family: 'Ruda', sans-serif; font-size:41px;}
 form{position:absolute;top:300px;left:360px;}
 
 
